# anim-bench

./: .gitignore  .gitmodules  Cargo.toml  README.md  benchmark.typ  flake.nix  justfile  pyproject.toml
.cargo/: config.toml
assets/data/0.1.1/linux/criterion/static_square/janim/0/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/janim/10/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/janim/20/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/janim/40/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/janim/5/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manim/0/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manim/10/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manim/20/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manim/40/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manim/5/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manimce/0/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manimce/10/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manimce/20/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manimce/40/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/manimce/5/new/: benchmark.json  estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/ranim/0/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/ranim/10/new/: estimates.json  sample.json  tukey.json
assets/data/0.1.1/linux/criterion/static_square/ranim/20/new/: estimates.json  sample.json  (+1 more)
benches/scenes/: main.rs
scenes/animating_pi/: janim.py  manim.py  manimce.py
scenes/empty/: manim.py
scenes/static_square10/: manimce.py
scenes/static_square20/: janim.py  manim.py  manimce.py
scenes/static_square40/: janim.py  manim.py
scenes/static_square5/: janim.py
scenes/static_tiger/: manimce.py
scenes/transform_square10/: janim.py
scenes/transform_square40/: manimce.py
scenes/transform_square5/: janim.py  manim.py  manimce.py
src/: lib.rs
xtasks/xtask-update-bench-data/: Cargo.toml
xtasks/xtask-update-bench-data/src/: main.rs
(+665 files in other folders)
