[package]
name = "anim-bench"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["packages/*"]

[dependencies]
ranim.workspace = true

[workspace.dependencies]
ranim = "0.1.1"
bench_scenes.path = "packages/bench_scenes"
itertools = "0.14.0"
pretty_env_logger = "0.5.0"
log = "0.4.27"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
paste = "1.0"

[[bench]]
name = "scenes"
harness = false
