[package]
name = "anim-bench"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["packages/*", "xtasks/*"]

[dependencies]
ranim.workspace = true

[workspace.dependencies]
ranim = { git = "https://github.com/AzurIce/ranim", features = ["render"] }
bench_scenes.path = "packages/bench_scenes"
itertools = "0.14.0"
pretty_env_logger = "0.5.0"
log = "0.4.27"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
paste = "1.0"

[[bench]]
name = "scenes"
harness = false

[profile.release]
debug = true
