[project]
name = "anim-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "janim[gui]>=3.6.0",
    "manim>=0.19.0",
    "manimgl",
    "numpy>=2.2.5",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
manimgl = { path = "manim" }
