[project]
name = "anim-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "janim[gui]",
    "manim",
    "manimgl",
    "numpy>=2.2.5",
    "setuptools>=80.9.0",
    "trimesh",
    "pywavefront",
]

[tool.uv.sources]
janim = { path = "JAnim", editable = true }
manim = { path = "manimce", editable = true }
manimgl = { path = "manim", editable = true }
